@@ -37,11 +37,11 @@ value               	string              	default
 # Detailed Table Information	 	 
 Database:           	default             	 
 Owner:              	null                	 
-CreateTime:         	Tue Oct 12 15:19:12 PDT 2010	 
+CreateTime:         	Fri Oct 15 23:16:18 PDT 2010	 
 LastAccessTime:     	UNKNOWN             	 
 Protect Mode:       	None                	 
 Retention:          	0                   	 
-Location:           	pfile:/home/thiruvel/projects/hive/hive.test.build/build/hbase-handler/test/data/warehouse/stats_src	 
+Location:           	pfile:/data/users/nzhang/reviews/3/apache-hive/build/hbase-handler/test/data/warehouse/stats_src	 
 Table Type:         	MANAGED_TABLE       	 
 Table Parameters:	 	 
 	EXTERNAL            	FALSE               
@@ -49,7 +49,7 @@ Table Parameters:
 	numPartitions       	0                   
 	numRows             	500                 
 	totalSize           	5812                
-	transient_lastDdlTime	1286921961          
+	transient_lastDdlTime	1287209788          
 	 	 
 # Storage Information	 	 
 SerDe Library:      	org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe	 
@@ -96,13 +96,11 @@ POSTHOOK: Lineage: stats_src.key SIMPLE [(src)src.FieldSchema(name:key, type:str
 POSTHOOK: Lineage: stats_src.value SIMPLE [(src)src.FieldSchema(name:value, type:string, comment:default), ]
 PREHOOK: query: analyze table hbase_part partition(ds='2008-04-08', hr=11) compute statistics
 PREHOOK: type: null
-PREHOOK: Input: default@hbase_part@ds=2010-04-08/hr=11
-PREHOOK: Input: default@hbase_part@ds=2010-04-08/hr=12
+PREHOOK: Input: default@hbase_part@ds=2008-04-08/hr=11
 PREHOOK: Output: default@hbase_part
 POSTHOOK: query: analyze table hbase_part partition(ds='2008-04-08', hr=11) compute statistics
 POSTHOOK: type: null
-POSTHOOK: Input: default@hbase_part@ds=2010-04-08/hr=11
-POSTHOOK: Input: default@hbase_part@ds=2010-04-08/hr=12
+POSTHOOK: Input: default@hbase_part@ds=2008-04-08/hr=11
 POSTHOOK: Output: default@hbase_part
 POSTHOOK: Lineage: hbase_part PARTITION(ds=2010-04-08,hr=11).key SIMPLE [(src)src.FieldSchema(name:key, type:string, comment:default), ]
 POSTHOOK: Lineage: hbase_part PARTITION(ds=2010-04-08,hr=11).value SIMPLE [(src)src.FieldSchema(name:value, type:string, comment:default), ]
@@ -112,13 +110,11 @@ POSTHOOK: Lineage: stats_src.key SIMPLE [(src)src.FieldSchema(name:key, type:str
 POSTHOOK: Lineage: stats_src.value SIMPLE [(src)src.FieldSchema(name:value, type:string, comment:default), ]
 PREHOOK: query: analyze table hbase_part partition(ds='2008-04-08', hr=12) compute statistics
 PREHOOK: type: null
-PREHOOK: Input: default@hbase_part@ds=2010-04-08/hr=11
-PREHOOK: Input: default@hbase_part@ds=2010-04-08/hr=12
+PREHOOK: Input: default@hbase_part@ds=2008-04-08/hr=12
 PREHOOK: Output: default@hbase_part
 POSTHOOK: query: analyze table hbase_part partition(ds='2008-04-08', hr=12) compute statistics
 POSTHOOK: type: null
-POSTHOOK: Input: default@hbase_part@ds=2010-04-08/hr=11
-POSTHOOK: Input: default@hbase_part@ds=2010-04-08/hr=12
+POSTHOOK: Input: default@hbase_part@ds=2008-04-08/hr=12
 POSTHOOK: Output: default@hbase_part
 POSTHOOK: Lineage: hbase_part PARTITION(ds=2010-04-08,hr=11).key SIMPLE [(src)src.FieldSchema(name:key, type:string, comment:default), ]
 POSTHOOK: Lineage: hbase_part PARTITION(ds=2010-04-08,hr=11).value SIMPLE [(src)src.FieldSchema(name:value, type:string, comment:default), ]
@@ -150,11 +146,11 @@ hr                  	string              	None
 # Detailed Table Information	 	 
 Database:           	default             	 
 Owner:              	null                	 
-CreateTime:         	Tue Oct 12 15:19:22 PDT 2010	 
+CreateTime:         	Fri Oct 15 23:16:29 PDT 2010	 
 LastAccessTime:     	UNKNOWN             	 
 Protect Mode:       	None                	 
 Retention:          	0                   	 
-Location:           	pfile:/home/thiruvel/projects/hive/hive.test.build/build/hbase-handler/test/data/warehouse/hbase_part	 
+Location:           	pfile:/data/users/nzhang/reviews/3/apache-hive/build/hbase-handler/test/data/warehouse/hbase_part	 
 Table Type:         	MANAGED_TABLE       	 
 Table Parameters:	 	 
 	EXTERNAL            	FALSE               
@@ -162,7 +158,7 @@ Table Parameters:
 	numPartitions       	2                   
 	numRows             	1000                
 	totalSize           	11624               
-	transient_lastDdlTime	1286921975          
+	transient_lastDdlTime	1287209805          
 	 	 
 # Storage Information	 	 
 SerDe Library:      	org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe	 
@@ -199,15 +195,15 @@ hr                  	string              	None
 Partition Value:    	[2010-04-08, 11]    	 
 Database:           	default             	 
 Table:              	hbase_part          	 
-CreateTime:         	Tue Oct 12 15:19:25 PDT 2010	 
+CreateTime:         	Fri Oct 15 23:16:33 PDT 2010	 
 LastAccessTime:     	UNKNOWN             	 
 Protect Mode:       	None                	 
-Location:           	pfile:/home/thiruvel/projects/hive/hive.test.build/build/hbase-handler/test/data/warehouse/hbase_part/ds=2010-04-08/hr=11	 
+Location:           	pfile:/data/users/nzhang/reviews/3/apache-hive/build/hbase-handler/test/data/warehouse/hbase_part/ds=2010-04-08/hr=11	 
 Partition Parameters:	 	 
 	numFiles            	1                   
 	numRows             	500                 
 	totalSize           	5812                
-	transient_lastDdlTime	1286921965          
+	transient_lastDdlTime	1287209793          
 	 	 
 # Storage Information	 	 
 SerDe Library:      	org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe	 
@@ -244,15 +240,15 @@ hr                  	string              	None
 Partition Value:    	[2010-04-08, 12]    	 
 Database:           	default             	 
 Table:              	hbase_part          	 
-CreateTime:         	Tue Oct 12 15:19:28 PDT 2010	 
+CreateTime:         	Fri Oct 15 23:16:37 PDT 2010	 
 LastAccessTime:     	UNKNOWN             	 
 Protect Mode:       	None                	 
-Location:           	pfile:/home/thiruvel/projects/hive/hive.test.build/build/hbase-handler/test/data/warehouse/hbase_part/ds=2010-04-08/hr=12	 
+Location:           	pfile:/data/users/nzhang/reviews/3/apache-hive/build/hbase-handler/test/data/warehouse/hbase_part/ds=2010-04-08/hr=12	 
 Partition Parameters:	 	 
 	numFiles            	1                   
 	numRows             	500                 
 	totalSize           	5812                
-	transient_lastDdlTime	1286921968          
+	transient_lastDdlTime	1287209798          
 	 	 
 # Storage Information	 	 
 SerDe Library:      	org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe	 
