@@ -2416,6 +2416,17 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+name|parameters
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+if|if
+condition|(
 operator|!
 name|parameters
 operator|.
@@ -2458,12 +2469,31 @@ name|boolean
 name|isOffline
 parameter_list|()
 block|{
-return|return
+name|ProtectMode
+name|pm
+init|=
 name|getProtectMode
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|pm
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+else|else
+block|{
+return|return
+name|pm
 operator|.
 name|offline
 return|;
+block|}
 block|}
 comment|/**    * @return True if protect mode attribute of the partition indicate    * that it is OK to drop the table    */
 specifier|public
